--- a/anorganik.html
+++ b/anorganik.html
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
 
-  <link href="assets/img/favicon.png" rel="png">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 
   <!-- Google Fonts -->
   <link
@@ -123,7 +123,7 @@
             <h1 class="sub-title-organik">Dampak - Dampak Sampah Anorganik</h1><br>
           </div>
 
-          <div>
+          <div class="organik-col-3">
             <li>Menyebabkan masalah kesehatan</li><br>
             <p style="line-height: 1.5;">Keberadaan sampah anorganik dapat meningkatkan risiko gangguan kesehatan, baik
               dari fisik sampah, maupun dari proses pembuatannya sendiri. Sebagai contoh, sampah anorganik seperti
