--- a/limbah-kaca.html
+++ b/limbah-kaca.html
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
 
-  <link href="assets/img/favicon.png" rel="png">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 
   <!-- Google Fonts -->
   <link
@@ -128,7 +128,7 @@
             <h1 class="sub-title-organik">Proses Daur Ulang Limbah Kaca</h1><br>
           </div>
 
-          <div>
+          <div class="organik-col-3">
             <ol>
               <li>Penyortiran</li>
               <p>Sampah kaca terlebih dahulu dikelompokkan berdasarkan warnanya. Hal ini karena bahan kimia yang berbeda
