--- a/limbah-kertas.html
+++ b/limbah-kertas.html
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
 
-  <link href="assets/img/favicon.png" rel="png">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 
   <!-- Google Fonts -->
   <link
@@ -138,7 +138,7 @@
             <h1 class="sub-title-organik">Pengolahan Limbah Kertas</h1><br>
           </div>
 
-          <div>
+          <div class="organik-col-3">
             <li>Pengurangan Dengan Prinsip Reduce</li><br>
             <p style="line-height: 1.5;">Kegiatan pengurangan ini dapat dilakukan dengan menghindari sikap pemakaian
               kertas yang berlebihan, dimana dilihat berdasarkan kebutuhan dan tingkat urgensinya. Contohnya seperti:
@@ -181,7 +181,7 @@
             <h1 class="sub-title-organik">Proses Daur Ulang Limbah Kertas</h1><br>
           </div>
 
-          <div>
+          <div class="organik-col-3">
             <li>Pengumpulan kertas (Collection)</li><br>
             <p style="line-height: 1.5;">Tahap awal dari proses ini adalah pengumpulan. Sampah kertas dikumpulkan
               terlebih dahulu dengan sistem pengumpulan yang baik dan efisien. Kondisi kertas yang dikumpulkan adalah
