--- a/limbah-plastik.html
+++ b/limbah-plastik.html
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
 
-  <link href="assets/img/favicon.png" rel="png">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 
   <!-- Google Fonts -->
   <link
@@ -137,7 +137,7 @@
             <h1 class="sub-title-organik">Dampak - Dampak Negatif Limbah Plastik</h1><br>
           </div>
 
-          <div>
+          <div class="organik-col-3">
             <ol>
               <li>Dampak sampah plastik yang sangat serius akibat menghirup mikroplastik ini. Diantaranya yaitu merusak
                 jaringan paru-paru, menyebabkan kanker dan asma</li>
@@ -151,7 +151,7 @@
             <h1 class="sub-title-organik">Cara Mengurangi Limbah Plastik</h1><br>
           </div>
 
-          <div>
+          <div class="organik-col-3">
             <li>Membawa tas belanja sendiri</li><br>
             <p>Kantong plastik belanja juga menjadi salah satu kontributor terbesar dari sampah yang tersebar di mana -
               mana. Kantong plastik belanja umumnya hanya bisa digunakan untuk beberapa kali saja dan akhirnya harus
@@ -187,7 +187,7 @@
             <h1 class="sub-title-organik">Proses Daur Ulang Limbah Kertas</h1><br>
           </div>
 
-          <div>
+          <div class="organik-col-3">
             <li>Pengumpulan Plastik (Collection)</li><br>
             <p>Tahapan pertama, yaitu pengumpulan sampah plastik yang akan didaur ulang dengan sumber yang disesuaikan
               dengan kebutuhan, baik rumah tangga maupun industri. Selain itu, wadah pengumpulan disarankan sudah khusus
@@ -216,14 +216,13 @@
             <li>Pemisahan dan Identifikasi Plastik</li><br>
             <p>Serpihan plastik ini akan dipisahkan dan diuji berdasarkan kualitasnya yakni tingkat kepadatan dan air
               classification.
-              <ul>
+              <ol>
                 <li>Tingkat kepadatan: serpihan plastik akan dimasukan ke dalam air, partikel kurang padat akan
                   mengapung dan yang cukup padat akan tenggelam.</li>
                 <li>Air classification: serpihan plastik akan dimasukan ke dalam ruangan yang berisi udara, partikel
                   lebih kecil akan terbang dan partikel lebih besar akan terbang dibawahnya</li>
-              </ul>
+              </ol>
             </p><br>
-
             <li>Penggabungan (compounding)</li><br>
             <p>Tahapan terakhir ini merupakan proses penghancuran dan peleburan menjadi biji atau pellet plastik dan
               siap digunakan sebagai bahan baku pembuatan plastik.
