--- a/organik.html
+++ b/organik.html
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
   
-  <link href="assets/img/favicon.png" rel="png">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -110,7 +110,7 @@
                     <br><h1 class="sub-title-organik">Dampak - Dampak Sampah Organik</h1><br>
                 </div>
 
-                <div>
+                <div class="organik-col-3">
                     <li>Tempat bersarangnya hewan penyebar penyakit</li><br>
                     <p style="line-height: 1.5;">Sampah organik yang menumpuk bisa menjadi tempat bersarangnya hewan 
                     penyebar penyakit seperti lalat dan lala. Hal ini akan berbahaya bagi kesehatan jika hewan tersebut 
