--- a/Alumunium.html
+++ b/Alumunium.html
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
 
-  <link href="assets/img/favicon.png" rel="png">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 
   <!-- Google Fonts -->
   <link
