--- a/limbah-besi.html
+++ b/limbah-besi.html
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
 
-  <link href="assets/img/favicon.png" rel="png">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 
   <!-- Google Fonts -->
   <link
@@ -120,8 +120,10 @@
             <h1 class="sub-title-organik">Proses Daur Ulang Limbah Besi & Logam</h1><br>
           </div>
 
-          <div>
-            <li>Tahap Pemilahan</li><br>
+          <div class="organik-col-3">
+            <ul>
+              <li>Tahap Pemilahan</li>
+            </ul>
             <p>Pada tahap ini limbah padat dipilah menurut jenisnya dan dipisahkan antara yang masih dapat dimanfaatkan
               dan yang tidak dapat dimanfaatkan, untuk kemudian dibuang. Secara ekonomi, tempat yang tepat untuk
               pemilahan adalah tempat asal dari limbah tersebut.
