--- a/limbah-elektronik.html
+++ b/limbah-elektronik.html
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
 
-  <link href="assets/img/favicon.png" rel="png">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 
   <!-- Google Fonts -->
   <link
@@ -123,7 +123,7 @@
             <h1 class="sub-title-organik">Dampak - Dampak Negatif Limbah Elektronik</h1><br>
           </div>
 
-          <div>
+          <div class="organik-col-3">
             <li>PCB</li> <br>
             <p>Digunakan pada bahan plastik, perekat, trafo, kapasitor, sistem hidrolis, ballast lampu, dan peralatan
               elektronik lainnya. Risiko yang muncul dari PCBs adalah persisten di lingkungan yang mudah terakumulasi
@@ -145,7 +145,7 @@
             <h1 class="sub-title-organik">Cara Mengurangi Limbah Elektronik</h1><br>
           </div>
 
-          <div>
+          <div class="organik-col-3">
             <li>Menjaga dan merawat keawetan barang elektronik </li><br>
             <p style="line-height: 1.5;">Cara utama yang paling mudah untuk dilakukan adalah menjaga daya tahan dan
               keawetan barang elektronik. Memelihara juga dapat mempertahankan performa barang elektronik itu sendiri
