--- a/sampah b3.html
+++ b/sampah b3.html
@@ -11,8 +11,8 @@
 
   <!-- Favicons -->
   
-  <link href="assets/img/favicon.png" rel="png">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon" type="image/png">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -112,7 +112,7 @@
                     <br><h1 class="sub-title-organik">Dampak - Dampak Sampah Berbahaya & Beracun</h1><br>
                 </div>
 
-                <div>
+                <div class="organik-col-3">
                     <li>Mencemari lingkungan</li><br>
                     <p style="line-height: 1.5;">Bahan-bahan yang digunakan dalam berbagai produk dari industri yang mengandung logam berat seperti arsin, asam akrilat, asam asetat, asam klorida, amoniak, alumunium klorida, dan masih banyak lagi. Jika dibuang sembarangan, bahan kimia tersebut dapat mencemari tanah, air dan udara. Pada akhirnya, cepat atau lambat, pencemaran itu akan memengaruhi kesehatan dan keberlangsungan hidup manusia.</p><br>
 
