--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               </div>
               <div class="member-info">
                 <h4>Ash Shoffihana Fadillah S.E., M. BA</h4>
-                <span></span>
+                <span>NIDN : 0307037801</span>
                 <p>Dosen Pembimbing</p>
               </div>
             </div>
@@ -421,23 +421,23 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="https://script.google.com/macros/s/AKfycbxQARft_lSrVlUtYEe14xX8Zs8eE4wXE69w0SoeRYdQPdetKxMMBt5yyyt0JwVlcZav/exec" method="post" class="php-email-form">
+            <form action="https://script.google.com/macros/s/AKfycbxseuK-UfwRlXm4Q_oLJdyQvs4370AmOa4FNnDlmJGPJcerpJvGc59fglWNpfOhsvQZ/exec" method="POST" class="php-email-form">
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+                  <input type="text" name="Name" class="form-control" placeholder="Your Name" required>
                 </div>
 
                 <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+                  <input type="email" class="form-control" name="Email" placeholder="Your Email" required>
                 </div>
 
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required>
-                </div>
+                <!-- <div class="col-md-12">
+                  <input type="text" class="form-control" name="Subject" placeholder="Subject" required>
+                </div> -->
 
                 <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+                  <textarea class="form-control" name="Message" rows="6" placeholder="Message" required></textarea>
                 </div>
 
                 <div class="col-md-12 text-center">
@@ -446,7 +446,6 @@
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
                   <button type="submit">Send Message</button>
-                  <span id="msg"></span>
                 </div>
 
               </div>
@@ -475,7 +474,6 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/js/form.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
